deployment/deployment.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  Simple Erupe Monster Hunter Frontier server deployment.
  EC2 runs Docker Compose with Erupe and PostgreSQL.

Parameters:
  # Latest Debian Image
  DebianAMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/debian/release/13/latest/amd64
    Description: Name of the image used for the deployment.

  InstanceType:
    Type: String
    Default: t3.small
    Description: EC2 instance type. t3.micro or t3.small recommended.

  MhfzDataBucketName:
    Type: String
    Default: my-mhfz-server-data
    Description: Name of the bucket that hosts the server's binaries and the serverless webapp.
  
  AdminIp:
    Type: String
    Description: IP address allowed to access SSH.
  
  KeyPairName:
    Type: String
    Default: MhfzKeyPair
    Description: Name of the key pair in AWS used for SSH.
  
Resources:
  # 1. VPC
  MhfzVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MhfzVPC

  # 2. Internet Gateway
  MhfzInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MhfzInternetGateway
  
  # 3. Attach Gateway to VPC
  MhfzVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref MhfzInternetGateway
      VpcId: !Ref MhfzVPC

  # 4. Subnet
  MhfzPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MhfzVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: MhfzPublicSubnet

  # 5. Route table
  MhfzPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MhfzVPC
  
  # 6. Route traffic through Gateway
  MhfzDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: MhfzVPCGatewayAttachment
    Properties:
      RouteTableId: !Ref MhfzPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MhfzInternetGateway
  
  # 7. Associate subnet with route table
  MhfzPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MhfzPublicSubnet
      RouteTableId: !Ref MhfzPublicRouteTable

  # 8. Security group
  MhfzSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MHFZ Server Access
      VpcId: !Ref MhfzVPC

      SecurityGroupIngress:
        # Horrible SSH Solution
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Sub '${AdminIp}/32'

        # MHFZ Sign V1
        - IpProtocol: tcp
          FromPort: 53312
          ToPort: 53312
          CidrIp: 0.0.0.0/0

        # MHFZ Sign V2
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

        # MHFZ Entrance
        - IpProtocol: tcp
          FromPort: 53310
          ToPort: 53310
          CidrIp: 0.0.0.0/0

        # MHFZ Channels
        - IpProtocol: tcp
          FromPort: 54001
          ToPort: 54008
          CidrIp: 0.0.0.0/0

  # 9. EC2 instance
  MhfzServer: 
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref DebianAMI
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 12
            VolumeType: gp3
            DeleteOnTermination: true
      SubnetId: !Ref MhfzPublicSubnet
      SecurityGroupIds:
        - !Ref MhfzSecurityGroup
      KeyName: !Ref KeyPairName
      
      IamInstanceProfile: !Ref MhfzInstanceProfile

      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe

          exec > >(tee -a /var/log/mhfz-userdata.log | logger -t mhfz-userdata -s 2>/dev/console) 2>&1
          
          echo "=== MHFZ UserData started ==="
          date
          apt-get update
          apt-get install -y git
          
          echo "=== Cloning project repository ==="
          git clone --branch dev https://github.com/ek-testlab/MhfzAWSDeployment.git /opt/mhfz-deployment

          chmod +x /opt/mhfz-deployment/scripts/bootstrap.sh

          echo "=== Executing bootstrap script ==="
          /opt/mhfz-deployment/scripts/bootstrap.sh

          echo "=== MHFZ UserData completed successfully ==="
          date
  
  # 10.1 Server Role to access the bucket
  MhfzServerRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole

      Policies:
        - PolicyName: MhfzS3Access
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                - s3:ListBucket
                Resource: !Sub 'arn:aws:s3:::${MhfzDataBucketName}'

              - Effect: Allow
                Action:
                - s3:GetObject
                - s3:PutObject
                Resource: !Sub 'arn:aws:s3:::${MhfzDataBucketName}/*'
  
  # 10.2 Instance Profile
  MhfzInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref MhfzServerRole

Outputs:
  PublicIP:
    Description: Public IP of the MHFZ Server for Ansible
    Value: !GetAtt MhfzServer.PublicIp
